i'm changing the relative index syling to align more with the show styling (although I'm keeping the different font). I still have to fix a few things on the index, but i'll get there later

--- a/rails-project/PhotoFamilyTree/app/assets/stylesheets/relatives.scss.css
+++ b/rails-project/PhotoFamilyTree/app/assets/stylesheets/relatives.scss.css
@@ -56,6 +56,21 @@ h3{
     margin-bottom: 0px;
 
 }
+h3 span{
+    background-color: rgba(40, 40, 40, .8);
+    padding: 5px 10px;
+    box-shadow: 0 0 20px rgba(40, 40, 40, 0.8);
+    color: rgba(255,255,255,.8);
+    font-weight: normal;
+}
+
+h1 span{
+    background-color: rgba(40, 40, 40, .8);
+    padding: 5px 10px;
+    box-shadow: 0 0 20px rgba(40, 40, 40, 0.8);
+    color: rgba(255,255,255,.8);
+    font-weight: normal;
+}
 
 a{
     font-family: 'Cinzel Decorative', cursive;
